--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,3 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-}
+@use "./layouts/global.scss";
+@use"./layouts/app.scss";
+@use"./layouts/fields.scss";
